--- a/src/Component/RedClayBricks.css
+++ b/src/Component/RedClayBricks.css
@@ -9,8 +9,8 @@
     font-size: 2.3rem; 
     text-transform: uppercase; 
     letter-spacing: 1px; 
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
 }
 
 .redclaybricks-packages-container {
@@ -21,7 +21,7 @@
 }
 
 .redclaybricks-package {
-    background: linear-gradient(to right, #9ed9c9, #88accb);
+    /* background: linear-gradient(to right, #9ed9c9, #88accb); */
     border: 1px solid #ced4da; 
     border-radius: 10px; 
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
@@ -39,7 +39,7 @@
 }
 
 .redclaybricks-package-header {
-    background: #007bff; 
+    background: #313a43; 
     color: #fff; 
     padding: 15px;
     display: flex;
@@ -48,19 +48,20 @@
     cursor: pointer;
     transition: background 0.3s; 
     font-size: 1.2rem; 
-    border-bottom: 2px solid #0056b3; 
+    /* border-bottom: 2px solid #0056b3;  */
     border-radius: 8px; 
 }
 
 .redclaybricks-package-header h2 {
-    font-size: 26px;
+    font-size: 24px;
     margin: 0px;
-    font-family: "Flamenco", system-ui;
+    font-family: "Roboto", sans-serif;
 }
 
 .redclaybricks-package-header p {
     font-size: 20px;
     margin: 0px;
+    font-family: "Roboto", sans-serif;
 }
 
 .redclaybricks-package-header:hover {
@@ -77,13 +78,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px;
-    background: #e7f1ff; 
+    /* background: #e7f1ff;  */
     border-radius: 5px;
     margin: 8px;
     cursor: pointer;
     transition: background 0.3s; 
     font-size: 1rem; 
-    color: #0056b3; 
+    color: #000; 
+    border: 1px solid #c5bdbd;
 }
 
 .redclaybricks-feature-details ul li span {
@@ -94,7 +96,7 @@
 .redclaybricks-feature-header h3 {
     font-size: 17px;
     margin: 2px;
-    font-family: "Flamenco", system-ui;
+    font-family: "Roboto", sans-serif;
 }
 
 .redclaybricks-feature-header:hover {
