--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -10,10 +10,10 @@
 .contact-form, .contact-info {
   flex: 1;
   min-width: 280px;
-  background: linear-gradient(to right, #9ed9c9, #88accb);
+  /* background: linear-gradient(to right, #9ed9c9, #88accb); */
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 20px rgba(0.1, 0.3, 0.3, 0.3);
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -27,14 +27,14 @@
   color: #ab0808; 
   text-align: center;
   font-size: 2.5em;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
 }
 
 .contact-form label {
   display: block;
   margin: 10px 0 5px;
   font-size: 1.4em;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
 }
 
 .contact-form input,
@@ -63,7 +63,7 @@
   transition: background-color 0.3s, transform 0.3s;
   font-size: 20px;
   font-weight: 600;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
 }
 
 .contact-form button:hover {
@@ -102,13 +102,13 @@
 .contact-topic {
   font-weight: bold;
   color: #333;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
 }
 
-.contact-text {
+.contact-text, .contact-text-number {
   font-size: 20px;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
 }
 
 
@@ -123,7 +123,7 @@
   color: #fff;
   text-align: center;
   font-size: 20px;
-  font-family: "Flamenco", system-ui;
+  font-family: "Roboto", sans-serif;
 }
 
 @media (max-width: 768px) {
@@ -133,9 +133,13 @@
   }
 
   .contact-form, .contact-info {
-    min-width: 100%;
+    width: 100%;
     padding: 15px;
   }
+  .contact-text {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+}
 
   .contact-map-container iframe {
     height: 150px;
@@ -151,6 +155,10 @@
     padding: 15px;
     margin: 0;
   }
+  .contact-text {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+}
 
   .contact-form button {
     padding: 10px;
