--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #70d3cf; 
+    background-color: #d9cfc2; 
     color: #000;
     padding: 40px 0 0 0;
     text-align: center;
@@ -7,8 +7,8 @@
   
   span.fotter_span {
     font-size: 18px;
-    font-family: "Teko" !important;
-    font-weight: 400 !important;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500 ;
 }
 
   .footer-container {
@@ -29,19 +29,20 @@
   .footer-logo {
     width: 180px;
     margin-bottom: 15px;
+    /* background-color: #000; */
   }
   
   .footer-description {
     font-size: 16px;
     line-height: 1.5;
     color: #000;
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
 }
 
 span.footer_no_span {
-  font-weight: 400 !important;
-  font-family: "Teko", sans-serif !important;
+  font-weight: 500 ;
+  font-family: "Roboto", sans-serif;
 }
   
   .footer-navigation {
@@ -55,8 +56,8 @@ span.footer_no_span {
     text-decoration: none;
     margin: 5px 0;
     font-size: 19px;
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
     transition: color 0.3s ease;
   }
   
@@ -72,24 +73,25 @@ span.footer_no_span {
     color: #871e0c; 
     margin-bottom: 10px;
     font-size: 24px;
-    font-family: "Flamenco", system-ui;
-    font-weight: bolder;
+    /* font-family: "Flamenco", system-ui; */
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
   }
   
   .footer-contact h3 {
     color: #871e0c; 
     margin-bottom: 10px;
     font-size: 24px;
-    font-family: "Flamenco", system-ui;
-    font-weight: bolder;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
   }
   
   .footer-contact p {
     margin: 5px 0;
     font-size: 19px;
     color: #000;
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
   }
   
   .footer-social {
@@ -101,16 +103,16 @@ span.footer_no_span {
     color: #871e0c; 
     margin-bottom: 10px;
     font-size: 24px;
-    font-family: "Flamenco", system-ui;
-    font-weight: bolder;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
   }
   
   .footer-social a {
     color: #000;
     margin: 0 10px;
     font-size: 24px;
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
     transition: color 0.3s ease;
   }
 
@@ -119,7 +121,7 @@ span.footer_no_span {
     margin: 0 10px;
     font-size: 24px;
     font-family: auto;
-    font-weight: 400;
+    font-weight: 500;
   }
   
   .footer-social a:hover {
@@ -129,8 +131,8 @@ span.footer_no_span {
   .footer-bottom {
     padding: 20px 0;
     font-size: 18px;
-    font-family: "Flamenco", system-ui;
-    font-weight: 800;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
     border-top: 1px solid #000;
   }
   
