--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -2,19 +2,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right, #38c29d, #549fe0);
-    /* background:  #fff; */
+    /* background: linear-gradient(to right, #38c29d, #549fe0); */
+    background:  #fff;
     color: #ffebee; 
     position: sticky;
     width: 100% ;
     top: 0px; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
     z-index: 1000;
   }
      
   .nav ul li a {
-    color: #ffffff;
-    /* color: #000000;  */
+    /* color: #ffffff; */
+    color: #000000; 
     padding: 4px 15px;
     transition: color 0.3s ease;
 }
@@ -41,13 +41,13 @@ ul.nav_ul li a {
     text-decoration: none;
     display: flex;
     font-size: 19px;
-    font-family: "Flamenco", system-ui;
+    font-family: "Roboto", sans-serif;
     font-weight: 600;
 }
 li.nav_call a {
-  font-family: "Teko", sans-serif !important;
-  font-weight: 400 !important;
-  font-size: 22px !important;
+  font-family: "Roboto", sans-serif ;
+  font-weight: 400 ;
+  font-size: 22px ;
 }
 ul.nav_ul li a:hover {
     text-decoration: none;
@@ -68,7 +68,7 @@ nav.nav {
 .mobile-menu-toggle {
     display: none;
     font-size: 1.8rem;
-    font-family: "Flamenco", system-ui;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     background: none;
     color: black;
@@ -115,7 +115,8 @@ nav.nav {
         height: auto;
         width: 100% ;
         padding: 0px;
-        margin: 0px;
+        margin: 20px 0px 0px 0px;
+        background-color: #000;
     }
     .sticky-header {
         justify-content: space-between;
@@ -127,5 +128,8 @@ nav.nav {
         width: 20%;
         text-align: right;
     }
+    ul.nav_ul li a {
+          color: #fff;
+  }
   }
   
