--- a/src/Component/Modal.css
+++ b/src/Component/Modal.css
@@ -26,7 +26,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 20px;
-    background-color: #4a90e2;
+    background-color: #2d333b;
     color: white;
   }
   
@@ -101,6 +101,6 @@
   .modal-body {
     overflow-y: auto; 
     max-height: 400px; 
-    background: linear-gradient(to right, #9ed9c9, #88accb);
+    /* background: linear-gradient(to right, #9ed9c9, #88accb); */
   }
   
